[package]
name = "nba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime  
serde = "1.0.201"
serde_json = "1.0.117"
colored = "2.1.0"
clap = { version = "4.5.4", features = ["derive"]}